@@ -1,0 +1,3 @@
+<object name="portal_catalog">
+    <column value="is_subdossier" />
+</object>
